@@ -1,6 +1,6 @@
 <?php
 /***************************************************************************
- *   Copyright (C) 2007 by Ivan Y. Khvostishkov                            *
+ *   Copyright (C) 2007-2009 by Ivan Y. Khvostishkov                       *
  *                                                                         *
  *   This program is free software; you can redistribute it and/or modify  *
  *   it under the terms of the GNU Lesser General Public License as        *
@@ -82,6 +82,18 @@
 			);
 			
 			return $dates;
+		}
+		
+		/**
+		 * @return Timestamp
+		**/
+		public static function alignToSeconds(Timestamp $stamp, $seconds)
+		{
+			$rawStamp = $stamp->toStamp();
+			
+			$align = floor($rawStamp / $seconds);
+			
+			return Timestamp::create($align * $seconds);
 		}
 	}
 ?>
